--- a/room.html
+++ b/room.html
@@ -11,6 +11,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/room.css">
+    <link rel="stylesheet" href="styles/modal.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -53,6 +54,7 @@
                     </footer>
                 </form>
             </section>
+
             <section id="questions">
                 <h2 class="sr-only">Lista e perguntas</h2>
 
@@ -61,15 +63,63 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="" alt="">
+                                <img src="assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no JavaScript?</p>
-                                <img src="assets/Avatar.svg" alt="Avatar">
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como lida</a>
+                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
+                                lida</a>
+                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                        </div>
+                    </div>
+
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é JavaScript?</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
+                                lida</a>
+                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                        </div>
+                    </div>
+
+                    <div class="question-wrapper read">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é TypeScript?</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                        </div>
+                    </div>
+
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/user.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime officiis ex magnam.
+                                    Expedita et unde, cumque ullam quod molestiae Zodit alias possimus! Corporis, quis
+                                    labore nulla eveniet possimus fugiat in!?</p>
+                            </div>
+                        </div>
+                        <div class="actions">
+                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
+                                lida</a>
                             <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
@@ -77,8 +127,31 @@
                 </div>
 
             </section>
+
+            <!-- distanciando as questions do fim da pag com sr-only -->
+            <footer class="footer">
+                <h2 class="sr-only">footer</h2>
+            </footer>
+
         </main>
 
+    </div>
+    <!-- MODAL -->
+    <div class="modal-wrapper">
+        <div class="modal">
+            <h2>Excluir pergunta</h2>
+            <p>Tem certeza que você deseja excluir esta pergunta</p>
+
+            <form action="#">
+                <label for-id="password" class="sr-only">Digite sua senha admin</label>
+                <input id="password" type="password" name="password" placeholder="Digite sua Senha">
+
+                <div class="buttons">
+                    <div class="button gray">Cancelar</div>
+                    <button class="button red">Sim, Excluir</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 
