--- a/pages/room.html
+++ b/pages/room.html
@@ -9,9 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/room.css">
-    <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/room.css">
+    <link rel="stylesheet" href="../styles/modal.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -23,16 +23,16 @@
     <div id="room" class="content">
         <header>
             <a href="#">
-                <img src="assets/logo.svg" alt="Rocket.Q Logo" class="logo" />
+                <img src="../assets/logo.svg" alt="Rocket.Q Logo" class="logo" />
             </a>
             <div class="buttons">
 
                 <div class="button outlined">
                     #323243
-                    <img src="assets/copy 1.svg" alt="Copiar número da sala">
+                    <img src="../assets/copy.svg" alt="Copiar número da sala">
                 </div>
                 <a href="#" class="button">
-                    <img id="img-button" src="assets/users-white.svg" alt="Criar uma sala">
+                    <img id="img-button" src="../assets/users-white.svg" alt="Criar uma sala">
                     Criar Sala
                 </a>
             </div>
@@ -47,7 +47,7 @@
 
                     <footer>
                         <div>
-                            <img src="assets/lock.svg" alt="cadeado">
+                            <img src="../assets/lock.svg" alt="cadeado">
                             Está pergunta é anônima
                         </div>
                         <button>Enviar</button>
@@ -63,53 +63,53 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no JavaScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
+                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como
                                 lida</a>
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é JavaScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
+                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como
                                 lida</a>
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é TypeScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime officiis ex magnam.
@@ -118,9 +118,9 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
+                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como
                                 lida</a>
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
