--- a/pages/create-pass.html
+++ b/pages/create-pass.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/home.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -22,7 +22,7 @@
     <div id="home" class="content">
         <header>
             <a href="#">
-                <img src="assets/logo.svg" alt="Rocket.Q Logo" class="logo"/>
+                <img src="../assets/logo.svg" alt="Rocket.Q Logo" class="logo"/>
             </a>
         </header>
 
@@ -39,7 +39,7 @@
                         <label class="sr-only" for="room-pass">Insira uma senha</label>
                         <input type="password" id="room-pass" placeholder="Insira uma senha">
                         <button>
-                            <img src="assets/users-white.svg" alt="Entrar na sala">
+                            <img src="../assets/users-white.svg" alt="Entrar na sala">
                             Criar Sala
                         </button>
                     </form>
