--- a/pages/home.html
+++ b/pages/home.html
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/home.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -22,7 +22,7 @@
     <div id="home" class="content">
         <header>
             <a href="#">
-                <img src="assets/logo.svg" alt="Rocket.Q Logo" class="logo"/>
+                <img src="../assets/logo.svg" alt="Rocket.Q Logo" class="logo"/>
             </a>
         </header>
 
@@ -39,7 +39,7 @@
                         <label class="sr-only" for="room-id">Código da sala</label>
                         <input type="number" id="room-id" placeholder="Código da sala">
                         <button>
-                            <img src="assets/enter-room.svg" alt="Entrar na sala">
+                            <img src="../assets/enter-room.svg" alt="Entrar na sala">
                             Entrar na sala
                         </button>
                     </form>
@@ -54,7 +54,7 @@
                 <section>
                     <h2>Crie sua própria sala de forma fácil</h2>
                     <a href="create-room.html" class="button outlined">
-                        <img src="assets/users.svg" alt="Criar Sala">
+                        <img src="../assets/users.svg" alt="Criar Sala">
                         Criar Sala
                     </a>
                 </section>
