--- a/front-end/pages/room.html
+++ b/front-end/pages/room.html
@@ -9,31 +9,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/room.css">
-    <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="../styles/global.css">
+    <link rel="stylesheet" href="../styles/room.css">
+    <link rel="stylesheet" href="../styles/modal.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="room" class="content">
         <header>
             <a href="#">
-                <img src="assets/logo.svg" alt="Rocket.Q Logo" class="logo" />
+                <img src="../assets/logo.svg" alt="Rocket.Q Logo" class="logo" />
             </a>
             <div class="buttons">
 
                 <div class="button outlined">
                     #323243
-                    <img src="assets/copy 1.svg" alt="Copiar número da sala">
+                    <img src="../assets/copy.svg" alt="Copiar número da sala">
                 </div>
                 <a href="#" class="button">
-                    <img id="img-button" src="assets/users-white.svg" alt="Criar uma sala">
-                    Criar Sala
+                    <img id="img-button" src="../assets/users-white.svg" alt="Criar uma sala"> Criar Sala
                 </a>
             </div>
         </header>
@@ -47,8 +45,7 @@
 
                     <footer>
                         <div>
-                            <img src="assets/lock.svg" alt="cadeado">
-                            Está pergunta é anônima
+                            <img src="../assets/lock.svg" alt="cadeado"> Está pergunta é anônima
                         </div>
                         <button>Enviar</button>
                     </footer>
@@ -63,64 +60,62 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no JavaScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
-                                lida</a>
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como lida
+                            </a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é JavaScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
-                                lida</a>
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como lida
+                            </a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é TypeScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="Avatar">
+                                <img src="../assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime officiis ex magnam.
-                                    Expedita et unde, cumque ullam quod molestiae Zodit alias possimus! Corporis, quis
-                                    labore nulla eveniet possimus fugiat in!?</p>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime officiis ex magnam. Expedita et unde, cumque ullam quod molestiae Zodit alias possimus! Corporis, quis labore nulla eveniet possimus fugiat in!?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="assets/check.svg" alt="Marcar como lida">Marcar como
-                                lida</a>
-                            <a class="delete" href="#"><img src="assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como lida
+                            </a>
+                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
